# streamlined-releases

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  action.yml  cliff.toml  compose.yml  logging.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  release.yml
src/streamlined_releases/: __init__.py  __main__.py  settings.py
src/streamlined_releases/events/: __init__.py  pull_request.py  push.py
src/streamlined_releases/services/: __init__.py  git.py  github.py
src/streamlined_releases/utils/: logging.py
